--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "mongodb": "^3.5.3",
     "mongoose": "^5.8.12",
     "nodemon": "^2.0.2"
