--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-particles-js": "^3.0.3",
     "react-scripts": "3.3.1"
   },
   "scripts": {
